--- a/api/widget.css
+++ b/api/widget.css
@@ -378,11 +378,11 @@
 .ethplorer-widget.widget-topTokens.theme-ethplorer {
 	max-width: 750px !important;
 }
-
+/*
 .ethplorer-widget.widget-topTokens.theme-ethplorer tr td:nth-child(1) {
 	color: white !important;
 }
-
+*/
 .ethplorer-widget.widget-topTokens.theme-ethplorer .tx-field-sort {
 	color: white !important;
 }
