--- a/extensions/CryptoKitties/css/styles.css
+++ b/extensions/CryptoKitties/css/styles.css
@@ -24,6 +24,41 @@
     display:none;
 }
 
+#ck-full td,
+#ck-address-block tr.last td {
+    text-align: center;
+}
+
+#ck-full .ck-kitty,
+#ck-address-block tr.last td .ck-kitty {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#ck-address-block tr.last td .ck-link {
+    cursor: pointer;
+    text-decoration: none !important;
+    border-bottom: 1px dashed #47C2FF;    
+}
+
+#ck-full td,
+#ck-address-block tr.last td {
+    padding-top:20px;
+}
+
+#ck-loading {
+    color: white;
+}
+
+.ck-full-close {
+    top: 24px;
+    position: absolute;
+    right: 32px;
+    font-size: 30px;
+    color: #444;
+    cursor: pointer;    
+}
+
 @media screen and (min-width: 992px) and (max-width: 1200px) {
     .ck-has-kitties {
         clear: left !important;
