Pregnant status display

--- a/extensions/CryptoKitties/css/styles.css
+++ b/extensions/CryptoKitties/css/styles.css
@@ -10,6 +10,10 @@
     margin-bottom:32px;
 }
 
+.ck-kitty-dashed {
+    border-style: dashed;
+}
+
 #ck-symbol {
     display:inline-block;
     vertical-align:top;
